# fomo

./: .eslintrc  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml  index.js  package.json  rustfmt.toml  test.js
ci/: before_deploy.ps1  before_deploy.sh  install.sh  script.sh
src/: error.rs  fs_view.rs  glob_wrapper.rs  lib.rs  main.rs  query.rs  regex_wrapper.rs  times.rs
src/fs_view/: mod.rs
src/notify/: fsevent.rs  mod.rs  null.rs  poll.rs  windows.rs
src/notify/debounce/: mod.rs  timer.rs
src/notify/inotify/: mod.rs
tests/: debounce.rs  event_path.rs  fsevents.rs  notify.rs  watcher.rs  windows.rs
tests/utils/: mod.rs
