[package]
name = "fomo"
version = "0.1.0"
authors = ["Adam Perry <adam.n.perry@gmail.com>"]
description = "A file-watcher for JavaScript build tools."

[dependencies]
chrono = { version = "^0.3.0", features = ["serde"] }
clap = { version = "^2.20.5", features = ["wrap_help"] }
env_logger = "^0.4.2"
error-chain = "^0.10.0"
glob = "^0.2.11"
log = "^0.3.7"
regex = "^0.2.1"
serde = "^0.9.6"
serde_derive = "^0.9.6"
serde_json = "^0.9.6"
walkdir = "^1.0.7"

[dev-dependencies]
tempdir = "^0.3.5"
