[package]
name = "fomo"
version = "0.1.0"
authors = ["Adam Perry <adam.n.perry@gmail.com>"]
description = "A file-watcher for JavaScript build tools."

[dependencies]
bitflags = "^0.7.0"
chrono = { version = "^0.3.0", features = ["serde"] }
clap = { version = "^2.20.5", features = ["wrap_help"] }
crossbeam = "^0.2.10"
env_logger = "^0.4.2"
error-chain = "^0.10.0"
filetime = "^0.1.9"
glob = "^0.2.11"
libc = "^0.2.4"
log = "^0.3.7"
regex = "^0.2.1"
serde = "^0.9.6"
serde_derive = "^0.9.6"
serde_json = "^0.9.6"
walkdir = "^1.0.7"

[target.'cfg(target_os="linux")'.dependencies]
inotify = "^0.3.0"
mio = "^0.5.0"

[target.'cfg(target_os="macos")'.dependencies]
fsevent = "^0.2.15"
fsevent-sys = "^0.1.3"

[target.'cfg(windows)'.dependencies]
winapi = "^0.2.5"
kernel32-sys = "^0.2.1"

[dev-dependencies]
tempdir = "^0.3.5"
